--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "17.7.1"
+  },
   "dependencies": {
     "body-parser": "^1.20.0",
     "ejs": "^2.7.4",
